Fixed alignment issue of the Back to Title Screen Button in Select Game Mode page!

--- a/Game Pages Styling/select-game-mode.css
+++ b/Game Pages Styling/select-game-mode.css
@@ -32,7 +32,6 @@ body{
     font-family: 'Inter 900';
     font-size: 150%;
     color: white;
-    border: 2px solid red;
     padding: 2%;
     margin: 4% 0px;
 }
@@ -42,19 +41,6 @@ a{
     /* Removes the underscore for all hyperlinks URLS */
     text-decoration: none;
     color: black;
-}
-
-/* Navigation button (Previous and Next buttons)*/
-.navigation-button{
-    display: block;
-    width: 200px;
-    height: 200px; 
-    margin: 20px;
-    background-color: lightgreen;
-}
-
-.navigation-button:hover{
-    background-color: goldenrod;
 }
 
 .select-game-modes{
@@ -77,4 +63,26 @@ a{
     transform: scale(1.25);
     background-color: lightblue;
     color: black;
+}
+
+/* Area containing the Back to Title Screen button */
+#previous-page-button{
+    display: flex;
+    justify-content: center;
+}
+
+/* Navigation button (Back to Title Screen button) */
+.navigation-button{
+    width: 80%;
+    justify-self: center;
+    background-color: var(--game-button-color);
+    height: 5rem;
+    font-size: 2rem;
+    margin: 2% 0%;
+    border-radius: 25px;
+    border: transparent;
+}
+
+.navigation-button:hover{
+    background-color: var(--game-button-hover-color);
 }
